--- a/DXApplication1/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1/DXApplication1.csproj
@@ -58,11 +58,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RibbonForm1.cs">
+    <Compile Include="ToolbarForm1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RibbonForm1.Designer.cs">
-      <DependentUpon>RibbonForm1.cs</DependentUpon>
+    <Compile Include="ToolbarForm1.Designer.cs">
+      <DependentUpon>ToolbarForm1.cs</DependentUpon>
     </Compile>
     <Compile Include="XtraForm1.cs">
       <SubType>Form</SubType>
@@ -81,8 +81,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RibbonForm1.resx">
-      <DependentUpon>RibbonForm1.cs</DependentUpon>
+    <EmbeddedResource Include="ToolbarForm1.resx">
+      <DependentUpon>ToolbarForm1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="XtraForm1.resx">
       <DependentUpon>XtraForm1.cs</DependentUpon>
